# llm-jp-asr

./: README.md  inference.py  pyproject.toml  train.py
llm_asr/: constants.py  conversation.py
llm_asr/model/: asr_gpt2.py  llm_asr_arch.py  whisper_encoder.py
llm_asr/train/: arguments_dataclass.py  dataset.py  llm_asr_trainer.py
